<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tfg.ruletheworld.interfaz.ObjetoDetailActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/nombre"
            android:layout_gravity="center" />
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_weight="1" >
    </View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtCantidad"
            android:id="@+id/txtCantidad" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/Cantidad" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_weight="1" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/info_vida" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icon_corazon"
            android:src="@drawable/icon_corazon_negro" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/info_ataque" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icon_espada"
            android:src="@drawable/icon_espada_negro" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/info_defensa" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icon_escudo"
            android:src="@drawable/icon_escudo_negro" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_weight="1" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:columnCount="5"
        android:rowCount="1"
        android:useDefaultMargins="false"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagenCasco"
            android:layout_column="0"
            android:layout_row="0"
            android:contentDescription="@string/casco"
            android:src="@drawable/icon_casco_gris"
            android:layout_gravity="center" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagenPeto"
            android:layout_column="1"
            android:layout_row="0"
            android:contentDescription="@string/pecho"
            android:src="@drawable/icon_torso_gris"
            android:layout_gravity="center" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagenPiernas"
            android:layout_column="2"
            android:layout_row="0"
            android:contentDescription="@string/piernas"
            android:src="@drawable/icon_piernas_gris"
            android:layout_gravity="center" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagenPies"
            android:layout_row="0"
            android:layout_column="3"
            android:contentDescription="@string/pies"
            android:src="@drawable/icon_pies_gris"
            android:layout_gravity="center" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagenArma"
            android:contentDescription="@string/arma"
            android:src="@drawable/icon_arma_gris"
            android:layout_column="4"
            android:layout_row="0"
            android:layout_gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_weight="1" >
    </View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonTirar"
            android:id="@+id/tirarBoton"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>